<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:paddingTop="48dp"
    android:paddingBottom="48dp">


    <ir.alirezaiyan.arclayout.ArcRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivIcon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:weightSum="5">

        </LinearLayout>

    </ir.alirezaiyan.arclayout.ArcRelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_card"
        android:layout_marginLeft="@dimen/margin_card"
        android:layout_marginEnd="@dimen/margin_card"
        android:layout_marginRight="@dimen/margin_card"
        android:layout_marginBottom="@dimen/margin_card"
        android:layout_marginTop="@dimen/margin_card"
        android:src="@mipmap/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:civ_border_width="0dp"
        app:civ_border_color="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation=".1dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginStart="@dimen/margin_card"
        android:layout_marginLeft="@dimen/margin_card"
        android:layout_marginTop="@dimen/margin_card"
        android:layout_marginEnd="@dimen/margin_card"
        android:layout_marginRight="@dimen/margin_card"
        android:layout_marginBottom="@dimen/margin_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:fontFamily="@font/bariol_bold"
                android:text="@string/login"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/bariol_regular"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:fontFamily="@font/bariol_regular"
                android:textColor="@color/colorAccent"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"/>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bariol_regular"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:fontFamily="@font/bariol_regular"
                android:textColor="@color/colorAccent"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword"/>

            <TextView
                android:id="@+id/tvResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_forgot_my_password"
                android:fontFamily="@font/bariol_regular"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingBottom="8dp"
                android:layout_marginBottom="@dimen/margin_card"
                android:onClick="resetPassword"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:fontFamily="@font/bariol_bold"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:onClick="login"/>

            <LinearLayout
                android:id="@+id/lyCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:visibility="gone"
                android:onClick="goToCreateAccount">

                <TextView
                    android:id="@+id/tvNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:padding="4dp"
                    android:text="@string/sign_up" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



    <ir.alirezaiyan.arclayout.ArcRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:arc_bottom_cropCurve="cropConvex"
        app:arc_bottom_height="10dp"
        app:arc_bottom_position="false"
        app:arc_top_position="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/bariol_regular"
                android:text="@string/terms_and_conditions"
                android:onClick="showDialogTermsAndConditions"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/bariol_bold"
                android:text="Versión - " />

        </LinearLayout>



    </ir.alirezaiyan.arclayout.ArcRelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>