...
    <string-array name="array_role">
        <item>Health Agent</item>
        <item>Health Service</item>
    </string-array>

    <!--Error user login/create account-->
    <string name="mandatory_field">Mandatory unfilled fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_matches">Password and confirm password does not match!!</string>
    <string name="password_length">Password length must have at least 8 character!!</string>
    <string name="incorrect_user_or_password">User or password incorrect</string>
    <string name="user_exist">That registered user already exists</string>
    <string name="error_terms_and_conditios">You must agree to terms and conditions</string>

    <!--Main-->
    <string name="close_question">Click again to close</string>

...
    <string name="edit_password">Change your password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search...</string>
    <string name="sent_instructions_to_change_password">If you accept, we will send you the instructions to change the password.</string>
    <string name="sent_instructions_to_change_password_ok">Sent. Check your email. If you can not find it, look in the Spam folder</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="delete_account_first_question">Are you sure you want to delete the account?</string>
    <string name="delete_account_second_question">This removes all your data permanently, do you want to continue?</string>

    <string name="no_internet">Check your Internet Connection</string>
...
